--- a/login.html
+++ b/login.html
@@ -9,7 +9,8 @@
   <body>
     <div class="main_container">
       <div class="logo">
-        <img src="images/logo.svg" alt="logo" />
+        <img src="images/logo.svg" alt="logo" class="desktop_logo" />
+        <img src="images/logo2.svg" alt="logo" class="mobile_logo" />
       </div>
 
       <div class="form_container">
